--- a/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1191,8 +1191,7 @@ Il costo totale del progetto \proj{} preventivato è arrotondato a \textbf{11700
 
 \subsection{Ore non rendicontabili successive all'aggiudicazione dell'appalto}
 Di seguito si riporta la divisione oraria pianificata generale delle ore non rendicontate a partire dalla \ARI, ovvero dalla aggiudicazione dell'appalto. Essa viene confrontata con il totale di ore rendicontate del progetto.
-Il totale risultante \textbf{non è a carico del cliente}. Viene fornito a scopo informativo.
-
+Il totale risultante ammonta a \textbf{923 ore}, pari al 60\% delle ore totali impiegate dal team per lo svolgimento del progetto. Si ricorda che tale sforzo \textbf{non è a carico del cliente}. Viene fornito a scopo informativo.
 
 \begin{figure}[H]
 \definecolor{white2}{rgb}{0.95,0.95,0.95}
@@ -1205,15 +1204,15 @@ Il totale risultante \textbf{non è a carico del cliente}. Viene fornito a scopo
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
-    \PB & 3/6 & 8/16 & 0 & 44/88 & 30/60 & 18/36 & 103/206 \\ \hline
-    \LB & 3/9 & 8/16 & 0 & 46/92 & 30/60 & 16/32 & 103/209 \\ \hline
-    \GG & 3/6 & 5/15 & 0 & 45/90 & 30/60 & 20/40 & 103/211 \\ \hline
-    \MM & 2/4 & 0/10 & 2 & 42/84 & 30/60 & 27/54 & 103/214 \\ \hline
-    \LS & 2/4 & 3/6 & 5 & 46/92 & 30/60 & 17/34 & 103/201 \\ \hline
-    \AZ & 2/4 & 5/10 & 8 & 41/82 & 30/60 & 17/34 & 103/198 \\ \hline
+    \PB & 3/4 & 8/12 & 0 & 44/66 & 30/45 & 18/27 & 103/154 \\ \hline
+    \LB & 3/6 & 8/12 & 0 & 46/69 & 30/45 & 16/24 & 103/156 \\ \hline
+    \GG & 3/4 & 5/12 & 0 & 45/67 & 30/45 & 20/30 & 103/158 \\ \hline
+    \MM & 2/4 & 0/10 & 2 & 42/63 & 30/45 & 27/40 & 103/162 \\ \hline
+    \LS & 2/4 & 3/4 & 5 & 46/69 & 30/45 & 17/26 & 103/148 \\ \hline
+    \AZ & 2/4 & 5/8 & 8 & 41/62 & 30/45 & 17/26 & 103/145 \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 15/33 & 29/78 & 15/0 & 264/518 & 180/360 & 125/250 & 618/1239 \\ \hline
+    Totale ore/ruolo & 15/26 & 29/48 & 15/0 & 264/396 & 180/270 & 125/173 & 618/923 \\ \hline
     
   \end{tabular}
   }
@@ -1221,12 +1220,7 @@ Il totale risultante \textbf{non è a carico del cliente}. Viene fornito a scopo
   \label{tab:rend}
 
   \caption{Tabella ore rendicontate/ore non rendicontate da \ARI, per ruolo e per persona.}
-\end{figure} 
-
-
-% boh dite voi io ho sparato numeri a caso
-
-
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Consuntivo di periodo
@@ -1625,6 +1619,7 @@ Il consuntivo presenta una differenza di costo negativa a causa del costo divers
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\pagebreak
 \subsection{Consuntivo \PDC}
 \introconsuntivo{\PDC}
 
@@ -1649,7 +1644,7 @@ Tra le cause del rallentamento delle attività di codifica, passate da due a qua
 \item difficoltà nell'individuazione degli strumenti necessari ai test di unità;
 \end{itemize}
 
-Tale rallentamento ha portato ad uno slittamento delle attività di codifica pari a 3 settimane, prevedendo la terminazione del secondo ciclo incrementale dal preventivato 07-04-2017 al 28-04-2017.
+Tale rallentamento ha portato ad uno slittamento delle attività di codifica pari a 3 settimane, prevedendo la terminazione del primo ciclo incrementale dal preventivato 07-04-2017 al 28-04-2017.
 
 È stato deciso inoltre di eliminare il secondo ciclo incrementale, in quanto:
 \begin{itemize}
@@ -1674,7 +1669,7 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
 \item Riassegnare il carico di lavoro rendicontabile bilanciandolo più nella \VV: questo non perché il team abbia lavorato in meno rispetto alle aspettative, ma perché le attività non rendicontabili hanno preso più tempo di quanto preventivato.
 \end{itemize}
 
-
+Si segnala quindi che le ore variate come indicato nella prossima sezione non rappresentano un risparmio, ma la riassegnazione delle attività. Si consulti il preventivo a finire relativo per ulteriori dettagli sulla nuova pianificazione.  
 
 \pagebreak
 \subsubsection{Variazione nei costi}
@@ -1754,35 +1749,199 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
     \hline
     \rowcolor[gray]{.9}
     Ruolo  & Ore & Costo \\ \hline
-    \R & 5 & 150 \\ \hline
-    \AM & 3 & 60 \\ \hline
-    \PJ & 189 (-19) & 4158 (-418)\\ \hline
-    \V & 45 (+23) & 675 (+345) \\ \hline
+    \R & 4 & 120 \\ \hline
+    \AM & 18 & 360 \\ \hline
+    \PJ & 0 (-56) & 0 (-1232)\\ \hline
+    \PG & 162 (-18) & 2430 (-270) \\ \hline
+    \V & 32 (-18) & 480 (-270) \\ \hline
     \rowcolor[gray]{.9}
 
-   Differenza & +4 & -73 \\ \hline
+   Differenza & -92 & -1772 \\ \hline
   \end{tabular}
   
 }
 
 \label{tab:car}
-\caption{Differenza preventivo-consuntivo per ruolo, \PA. Colonna \emph{Costo} in euro (\euro).}
+\caption{Differenza preventivo-consuntivo per ruolo, \PDC. Colonna \emph{Costo} in euro (\euro).}
 \end{figure}
 
 \subsubsection{Considerazioni}
 A fronte della scelta presa di riequilibrare il carico, si presenta successivamente il nuovo preventivo a finire.
-% dobbiamo fare ancora i test 
-% dobbiamo codificare ancora varie cose
 
+Si segnala che la cifra risparmiata nel periodo di \PA{}, pari a 73\euro{}, è stata reinvestita nella \VV a supporto di attività di verifica e test.
+
+Non sono state portate a termine tutte le attività di codifica dei test, in particolare i test di sistema ed integrazione: tuttavia essi sono stati specificati all'interno del documento \PdQ.
 
 \subsubsection{Nuova pianificazione}
 Si riporta la nuova pianificazione del periodo \VV{}.
-%2 tabelle, grafici
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}[width=1.2\textwidth]{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3 & 8 & 0 & 8 (+8) & 0 & 19 (+14) & 38 (+22) \\ \hline
+    \LB & 3 & 0 & 0 & 0 & 10 (+10) & 6 (+4) & 19 (+14) \\ \hline
+    \GG & 0 & 0 & 0 & 0 & 10 (+10) & 18 (+4) & 28 (+14) \\ \hline
+    \MM & 0 & 0 & 2 & 0 & 10 (+10) & 13 (-2) & 25 (+8) \\ \hline
+    \LS & 0 & 0 & 0 & 0 & 0 & 20 (+18) & 20 (+18) \\ \hline
+    \AZ & 0 & 0 & 0 & 0 & 8 (+8) & 30 (+9) & 21 (+18) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 6 & 8 & 2 & 8 (+8) & 30 (+30) & 97 (+56) & 151 (+94) \\ \hline
+    
+  \end{tabular}
+  }
+  \caption{Ore/ruolo per persona durante la \VV.}
+\label{fig:vv1}
+\end{figure} 
+% i colori danno problemi di visualizzazione alle linee
+
+\pagebreak
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.1\textwidth]{img/finirevv.png}}
+\caption{Ore/ruolo per persona durante la \VV.}
+\label{fig:vv1}
+
+\end{figure}
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.1\textwidth]{img/finirevv2.png}}
+\caption{Ore/persona per ruolo durante la \VV.}
+\label{fig:vv2}
+
+\end{figure}
+
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
+    \PB & 90 & 160 & 0 & 176 (+176) & 0 & 285 (+210) & 711 (+386) \\ \hline
+    \LB & 90 & 0 & 0 & 0 & 150 (+150) & 90 (+60) & 330 (+210) \\ \hline
+    \GG & 0 & 0 & 0 & 0 &  150 (+150)  & 270 (+60) & 420 (+210) \\ \hline
+    \MM & 0 & 0 & 50 & 0 &  150 (+150)  & 195 (-30) & 395 (+120) \\ \hline
+    \LS & 0 & 0 & 0 & 0 & 0 & 300 (+270) & 300 (+270) \\ \hline
+    \AZ & 0 & 0 & 0 & 0 & 0 & 315 (+270) & 315 (+270) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale euro/ruolo & 180 & 160 & 50 & 176 (+176) & 450 (+450) & 1455 (+840) & 2471 (+1466) \\ \hline
+  \end{tabular}
+  
+}\label{tab:vv}
+
+  \caption{Tabella costo {\VV} per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+
 
 \subsubsection{Preventivo a finire}
-Si riporta il nuovo preventivo a finire.
-%grafici del rendicontabili e tabelle varie, far vedere come sono cambiati i costi
+Si riporta il nuovo preventivo per le ore rendicontate.
 
+%grafici del rendicontabili e tabelle varie, far vedere come sono cambiati i costi
+Successivamente sono evidenziate graficamente la divisione delle ore per persona e ruolo.
+
+Questo quadro riassuntivo esclude il periodo di {\AR}: il totale risultante \textbf{è a carico del cliente}.
+
+Il quantitativo rendicontato a preventivo a persona è di \textbf{104 ore} e il quantitativo di ore preventivate totali è fissato a \textbf{624 ore}.
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}[width=1.2\textwidth]{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3 & 8 & 0 & 34 (-10) & 27 (-3) & 32 (+14) & 104 (+1) \\ \hline
+    \LB & 3 & 8 & 0 & 38 (-8) & 37 (+7) & 18 (+2) & 104 (+1) \\ \hline
+    \GG & 3 & 5 & 0 & 35 (-10) & 37 (+7) & 24 (+4) & 104 (+1) \\ \hline
+    \MM & 2 & 0 & 2 & 39 (-3) &  37 (+7) & 24 (-3) & 104 (+1) \\ \hline
+    \LS & 2 & 3 & 5 & 28 (-18) & 27 (-3) & 39 (+22) & 104 (+1) \\ \hline
+    \AZ & 2 & 5 & 8 & 23 (-18) & 27 (-3) & 39 (+22) & 104 (+1) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 15 & 29 & 15 & 197 (-67) & 192 (+12) & 176 (+51) & 624 (+6) \\ \hline
+    
+  \end{tabular}
+  }
+  
+  \label{tab:rend}
+
+  \caption{Tabella costo generale per ruolo e per persona, valori in euro (\euro).}
+\end{figure} 
+% i colori danno problemi di visualizzazione alle linee
+
+
+\subsubsection{Costo ore rendicontate del progetto}
+Di seguito si riporta il costo delle ore totali rendicontate, suddiviso per persona e ruolo.
+
+Questo quadro riassuntivo esclude il periodo di {\AR}: i costi che seguono \textbf{ sono a carico del cliente}.
+
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+  \begin{tabular}{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
+    \PB & 90 & 160 & 0 & 748 (-220) & 405 (-45) & 480 (+210) & 1883 (-55) \\ \hline
+    \LB & 90 & 160 & 0 & 836 (-176) & 555 (+105) & 270 (+30) & 1911 (-41) \\ \hline
+    \GG & 90 & 100 & 0 & 770 (-220) &  555 (+105) & 360 (+60) & 1875 (-55) \\ \hline
+    \MM & 60 & 0 & 50 & 858 (-66) &  555 (+105) & 360 (-45) & 1883 (-6) \\ \hline
+    \LS & 60 & 60 & 125 & 616 (-396) & 405 (-45) & 585 (+330) & 1851 (-111) \\ \hline
+    \AZ & 60 & 100 & 200 & 506 (-396) & 405 (-45) & 585 (+330) & 1856 (-111) \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale euro/ruolo & 450 & 580 & 375 & 4334 (-1474) & 2880 (+180) & 2640 (+915) & 11259 (-379) \\ \hline
+  \end{tabular}
+  
+}\label{tab:cgen}
+
+  \caption{Tabella costo totale per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+
+Il costo totale del progetto \proj{} preventivato è pari a \textbf{11259{\euro}} (\emph{undicimilaeduecentocinquantanove euro}).
+
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.2\textwidth]{img/nuovopreventivo.png}}
+\label{tab:cgen1}
+
+  \caption{Ore totali per il progetto \proj{} per persona, valori in ore.}
+\end{figure}
+
+
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.2\textwidth]{img/nuovopreventivo2.png}}
+\label{tab:cgen1}
+
+  \caption{Costo totale per il progetto \proj{} per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
 
 
 
