lettera + vers.sty

--- a/Esterni/Lettere/RQ.tex
+++ b/Esterni/Lettere/RQ.tex
@@ -61,7 +61,7 @@ Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli asp
 	\end{itemize}
 \end{itemize}
 
-Stimiamo di consegnare il prodotto richiesto entro il 15 maggio 2017 con un preventivo di \num{11700}\euro{} (euro), come analizzato nel documento \PdP.
+Stimiamo di consegnare il prodotto richiesto entro il 15 maggio 2017 con un preventivo di \num{11700}\euro{} (euro), come analizzato nel documento \PdP. All'indirizzo web \url{https://github.com/hivex-unipd/swedesigner} pu\`o reperire il codice sorgente attualmente implementato.
 
 \closing{Distinti Saluti,}
 
