--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -1772,6 +1772,8 @@ Si segnala che la cifra risparmiata nel periodo di \PA{}, pari a 73\euro{}, è s
 
 Non sono state portate a termine tutte le attività di codifica dei test, in particolare i test di sistema ed integrazione: tuttavia essi sono stati specificati all'interno del documento \PdQ.
 
+%Il \Rx{} ha tentato di incentivare il gruppo ad utilizzare Github Issues al fine tracciare 
+
 \subsubsection{Nuova pianificazione}
 Si riporta la nuova pianificazione del periodo \VV{}.
 
