--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -191,93 +191,6 @@ Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 \end{tabular}
 \end{center}
 
-
-			% \paragraph{Pianificazione di progetto e processo di verifica e controllo}
-			% Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
-			% \\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
-			% 	\subparagraph{Rispetto della pianificazione} 
-			% 	Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP{} e svolgendo tutti i compiti in cui essa si articola.
-			% 	Gli obiettivi di pianificazione e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{schedule variance}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-			% 	\subparagraph{Rispetto del budget}   
-			% 	I costi di ogni processo dovranno rientrare nel budget previsto dal documento \PdP.
-			% 	Gli obiettivi di efficienza e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{budget variance}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-
-			% \paragraph{Processo di gestione della documentazione del software}
-			% Il processo, corrispondente al processo 7.2.1 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di produrre e gestire la documentazione relativa alle funzionalità e alle caratteristiche del sistema software prodotto.
-			% \\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
-			% 	\subparagraph{Leggibilità della documentazione}
-			% 	La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.
-			% 	Gli obiettivi relativi alla documentazione e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{indice di Gulpease}: l'obiettivo stabilito per la metrica è l'intervallo $[60, 100]$.
-			% 	\end{itemize}
-
-			% \paragraph{Processo di progettazione del software}
-			% Il processo, corrispondente al processo 7.1.3 dello standard ISO/IEC 12207:2008, ha lo scopo di definire un'architettura software che implementi i requisiti corrispondenti e identifichi le diverse componenti del sistema.
-			% Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
-			% 	\subparagraph{Completezza}
-			% 	L'architettura prodotta rispetta le regole di progettazione che ne garantiscono la completezza. Ad esempio si evitano \gloss{package} senza elementi, classi non usate, parametri senza un tipo, ecc.
-			% 	Gli obiettivi relativi alla completezza dell'architettura e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{numero di violazioni della completezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni della completezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni della completezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-			% 	\subparagraph{Correttezza}
-			% 	L'architettura prodotta rispetta le regole di progettazione che ne garantiscono la correttezza rispetto allo standard UML.
-			% 	Gli obiettivi relativi alla correttezza dell'architettura e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{numero di violazioni della correttezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni della correttezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni della correttezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-			% 	\subparagraph{Stile}
-			% 	L'architettura prodotta non presenta problemi di design che, pur essendo legali per lo standard UML, possano compromettere la qualità generale del sistema. (Ad esempio si evitano dipendenze circolari tra i pacchetti, lunghe liste di parametri, ecc.)
-			% 	Gli obiettivi relativi allo stile dell'architettura e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{numero di violazioni dello stile architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni dello stile architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni dello stile architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-
-			% \paragraph{Processo di costruzione del software}
-			% Il processo, corrispondente al processo 7.1.5 previsto dallo standard ISO/IEC 12207:2008, definisce le attività principali volte alla produzione di unità software eseguibili che riflettano quanto identificato a livello di progettazione.
-			% \\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
-			% 	\subparagraph{Rispetto delle norme di codifica}
-			% 	Durante il processo di codifica vengono rispettate le norme stabilite nel documento \NdP.
-			% 	Gli obiettivi di rispetto delle norme di codifica e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{numero di violazioni di alta importanza delle norme di codifica}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni di media importanza delle norme di codifica}: l'obiettivo stabilito per la metrica è il valore $0$;
-			% 		\item \textbf{numero di violazioni di bassa importanza delle norme di codifica}: l'obiettivo stabilito per la metrica è il valore $0$.
-			% 	\end{itemize}
-
-			% \paragraph{Processo di test per la qualifica del software/sistema}
-			% Il macro-processo, derivante dall'unione dei processi 6.4.6 e 7.1.7 dello standard ISO/IEC 12207:2008, ha lo scopo che ogni requisito individuato sia stato implementato nel prodotto.
-			% \\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
-			% 	\subparagraph{Corretto funzionamento del sistema e integrazione delle componenti}
-			% 	Le funzionalità richieste sono state integrate all'interno di un prodotto software le cui diverse componenti interagiscono fra esse in modo coerente e senza criticità, a formare un sistema coeso e funzionante.
-			% 	Gli obiettivi relativi al corretto funzionamento del sistema e le metriche ad essi associate sono i seguenti:
-		 % 		\begin{itemize}
-			% 		\item \textbf{percentuale di test di unità eseguiti}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 		\item \textbf{percentuale di test di integrazione eseguiti}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 		\item \textbf{percentuale di test di sistema eseguiti}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 		\item \textbf{percentuale di test di validazione eseguiti}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 	\end{itemize}
-
-			% 	\subparagraph{Copertura codice}
-			% 	I test effettuati sulle diverse componenti del prodotto software andranno a considerare una gran parte delle possibili casistiche d'utilizzo e ad esplorare una notevole fetta del codice sorgente ad esso relativo. Gli obiettivi relativi alla copertura del codice e le metriche ad essi associate sono i seguenti:
-			% 	\begin{itemize}
-			% 		\item \textbf{\gloss{statement} coverage}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 		\item \textbf{\gloss{branch} coverage}: l'obiettivo stabilito per la metrica è il valore $100$;
-			% 	\end{itemize}
-	
 	\subsection{Qualità di prodotto} \label{sec:qualprodotto}
 	Per garantire una buona qualità di prodotto, il gruppo \hx{} ha individuato dallo standard \gloss{ISO/IEC 9126:2001} le qualità che ritiene di maggior importanza durante il ciclo di vita del prodotto e ha individuato gli obiettivi e le metriche coerenti con i livelli di qualità stabiliti.
 		\subsubsection{Procedure per il controllo delle qualità di prodotto}
@@ -2297,7 +2210,7 @@ I test di unità verificano che ogni singola unità (parte di una componente sof
 \section{Resoconto attività di verifica}
 All'interno di questa sezione vengono riportati gli esiti delle attività di verifica svolte sui processi attivati e sui relativi prodotti secondo quanto stabilito nel \PdP.
 	\subsection{Revisione dei requisiti}
-		\subsubsection{Verifica processo di documentazione}
+		\subsubsection{Verifica Software Documentation Management Process}
 		Le attività di verifica svolte sui documenti prodotti sono state di due tipi:
 		\begin{itemize}		
 			\item attività di verifica manuali;
@@ -2336,7 +2249,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
 		\end{table}
 		
-		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
+		\subsubsection{Verifica Project Planning Process \& Process Assessment and Control Process}
 		Per verificare il soddisfacimento degli obiettivi di qualità definiti per tale processo, a partire dal 				consultivo redatto nel \PdP{} sono stati calcolati gli indici di budget variance e schedule variance per ognuna delle attività previste.
 		
 		I risultati ottenuti sono elencati nella seguente tabella:	
@@ -2359,7 +2272,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 
 
 	\subsection{Revisione dei progettazione}
-		\subsubsection{Verifica processo di documentazione}
+		\subsubsection{Verifica Software Documentation Management Process}
 		Le attività di verifica svolte sui documenti prodotti durante la progettazione sono state di due tipi:
 		\begin{itemize}		
 			\item attività di verifica manuali;
@@ -2398,7 +2311,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
 		\end{table}
 		
-		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
+		\subsubsection{Verifica Project Planning Process \& Process Assessment and Control Process}
 		Per verificare il soddisfacimento degli obiettivi di qualità definiti per tale processo, a partire dal consultivo redatto nel \PdP{} sono stati calcolati gli indici di budget variance e schedule variance per ognuna delle attività previste.
 		
 		I risultati ottenuti sono elencati nella seguente tabella:	
@@ -2422,7 +2335,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\end{table}
 		* è stato necessario allocare un numero maggiore di ore per il piano di qualifica rispetto a quanto preventivato alla luce della valutazione negativa ottenuta in sede di revisione RR. Tali ore sono state sottratte all'attività di progettazione e quindi alla redazione del documento \ST.
 		
-		\subsubsection{Verifica processo di architettura del software}
+		\subsubsection{Verifica Software Architectural Design Process}
 		La verifica del rispetto degli obiettivi stabiliti per tale processo è stata effettuata calcolando una serie di metriche specificate nel documento \NdP. Queste metriche sono d'aiuto alla comprensione del grado di completezza, correttezza e stile dell'architettura software prodotta.
 		
 		I risultati ottenuti sono elencati nella seguente tabella:
@@ -2509,7 +2422,7 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 	** l'unica classe che ha un numero di figli diretti al di fuori del range d'accettazione è la classe ActivityDiagramElement.
 
 \subsection{Revisione di qualifica}
-		\subsubsection{Verifica processo di documentazione}
+		\subsubsection{Verifica Software Documentation Management Process}
 		Le attività di verifica svolte sui documenti prodotti durante la progettazione sono state di due tipi:
 		\begin{itemize}		
 			\item attività di verifica manuali;
@@ -2534,22 +2447,22 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\hline
 		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{~~~~~~Esito~~~~~~} \\
 		\hline
-		\PdQ 					&61		&~~~~~~Superato~~~~~~\\
-		\NdP 					&49		&~~~~~~Superato~~~~~~\\
+		\PdQ 					&72		&~~~~~~Superato~~~~~~\\
+		\NdP 					&68		&~~~~~~Superato~~~~~~\\
 		\AdR 					&71		&~~~~~~Superato~~~~~~\\
-		\PdP 					&55		&~~~~~~Superato~~~~~~\\
-		\ST 					&69		&~~~~~~Superato~~~~~~\\
-		\DP 					&69		&~~~~~~Superato~~~~~~\\	
-		\Glossario 				&48		&~~~~~~Superato~~~~~~\\
-		\textit{VI_--.pdf} 		&57		&~~~~~~Superato~~~~~~\\
-		\textit{VI_--.pdf} 		&57		&~~~~~~Superato~~~~~~\\
-		\textit{VI_--.pdf} 		&57		&~~~~~~Superato~~~~~~\\
+		\PdP 					&59		&~~~~~~Superato~~~~~~\\
+		\ST 					&75		&~~~~~~Superato~~~~~~\\
+		\DP 					&70		&~~~~~~Superato~~~~~~\\	
+		\Glossario 				&51		&~~~~~~Superato~~~~~~\\
+		\textit{VI_17-03-17.pdf} 		&61		&~~~~~~Superato~~~~~~\\
+		\textit{VE_17-03-20.pdf} 		&70		&~~~~~~Superato~~~~~~\\
+		\textit{VE_17-03-23.pdf} 		&65		&~~~~~~Superato~~~~~~\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
 		\end{table}
 		
-		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
+		\subsubsection{Verifica Project Planning Process \& Process Assessment and Control Process}
 		Per verificare il soddisfacimento degli obiettivi di qualità definiti per tale processo, a partire dal consultivo redatto nel \PdP{} sono stati calcolati gli indici di budget variance e schedule variance per ognuna delle attività previste.
 		
 		I risultati ottenuti sono elencati nella seguente tabella:	
@@ -2558,21 +2471,23 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\hline
 		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} 		\\
 		\hline
-		\PdQ 					&0\%		&-105*\%\\
+		\PdQ 					&0\%		&0\%\\
 		\NdP 					&0\%		&0\%\\
 		\AdR 					&0\%		&0\%\\
 		\PdP 					&0\%		&0\%\\
-		\ST						&0\%		&+11*\%\\
-		\DP						&0\%		&0\%\\
+		\ST						&0\%		&0\%\\
+		\DP						&-38\%*		&-35\%*\\
 		\Glossario 				&0\%		&0\%\\
-		\textit{VI_--.pdf} 		&0\%		&0\%\\
+		\textit{VI_17-03-17.pdf} 		&0\%		&0\%\\
+		\textit{VE_17-03-20.pdf} 		&0\%		&0\%\\
+		\textit{VE_17-03-23.pdf} 		&0\%		&0\%\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo degli indici di schedule e budget variance}
 		\end{table}
-		* è stato necessario allocare un numero maggiore di ore per il piano di qualifica rispetto a quanto preventivato alla luce della valutazione negativa ottenuta in sede di revisione RR. Tali ore sono state sottratte all'attività di progettazione e quindi alla redazione del documento \ST.
-		
-		\subsubsection{Verifica processo di architettura del software}
+		*Per maggiori dettagli relativi alla riduzione del tempo e del budget dedicato al documento \DP si consulti il \PdP.
+
+		\subsubsection{Verifica Software Architectural Design Process}
 		La verifica del rispetto degli obiettivi stabiliti per tale processo è stata effettuata calcolando una serie di metriche specificate nel documento \NdP. Queste metriche sono d'aiuto alla comprensione del grado di completezza, correttezza e stile dell'architettura software prodotta.
 		
 		I risultati ottenuti sono elencati nella seguente tabella:
@@ -2657,6 +2572,25 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 	* abbiamo deciso di specificare solamente i valori massimi e minimi della metrica per evitare di creare tabelle troppo prolisse e poco leggibili, a fronte di un contenuto equivalente a quello proposto.
 	
 	** l'unica classe che ha un numero di figli diretti al di fuori del range d'accettazione è la classe ActivityDiagramElement.
+	
+		\subsection{System Qualification Testing Process \& Software Qualification Testing Process}
+		Per verificare l'osservanza degli obiettivi di qualità riguardanti la produzione di unità software eseguibili, sono stati calcolati i valori delle seguenti metriche.
+		
+\begin{center}
+\begin{tabular}{| p{6cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
+	\hline
+	\textbf{Metrica} & \textbf{Valore/range obiettivo} & \textbf{Valore/range accettabile} & \textbf{Valore/range effettivo} \\
+	\hline
+	numero di violazioni di alta importanza delle norme di codifica & $0$ & $0$ & $0$\\
+	numero di violazioni di media importanza delle norme di codifica & $0$ & $0$ & $0$\\
+	numero di violazioni di bassa importanza delle norme di codifica & $0$ & $0$ & $0$\\
+	\hline
+\end{tabular}
+\end{center}
+		
+	
+		\subsubsection{Verifica della qualità del software}
+		Per verificare l'osservanza degli obiettivi riguardanti la qualità dell'architettura prodotta, sono stati calcolati i valori delle metriche relative ai diagrammi dei package
 
 
 
