--- a/Esterni/Specifica_tecnica/tex/pattern.tex
+++ b/Esterni/Specifica_tecnica/tex/pattern.tex
@@ -33,10 +33,10 @@ Questi includono Parser(il quale è configurato per accettare file json) e Gener
 Viene implementato tramite il framework \emph{Spring}, il quale fornisce dei componenti altamente versatili(chiamati bean) che permettono di creare e risolvere le dipendenze.
 Un esempio concreto é la richesta di un oggetto Generator alla quale Spring fornirà un'istanza di tipo JavaGenerator.
 
-\begin{figure}[H] \label{fig:injector}
-	\includegraphics[scale=0.8]{img/depExample.png}
-	\caption{Dependency Injection.}
-\end{figure}
+%\begin{figure}[H] \label{fig:injector}
+%	\includegraphics[scale=0.8]{img/depExample.png}
+%	\caption{Dependency Injection.}
+%\end{figure}
 
 \subsection{Command}
 
